[gd_scene load_steps=7 format=3 uid="uid://ikhqs0utn87o"]

[ext_resource type="Script" path="res://Demon_assets/demon_card.gd" id="1_sc3gs"]
[ext_resource type="Texture2D" uid="uid://bsce5kqkcacvi" path="res://Demon_assets/accept-svgrepo-com.svg" id="2_dj31m"]
[ext_resource type="Texture2D" uid="uid://dh1mbr82dy11b" path="res://Demon_assets/demon_preview.jpg" id="2_faytf"]
[ext_resource type="PackedScene" uid="uid://d2uig8x87eq8s" path="res://privew_3d_demon.tscn" id="2_vluwp"]
[ext_resource type="Script" path="res://Demon_assets/TwoButtonsLayout.gd" id="3_cv786"]
[ext_resource type="Texture2D" uid="uid://cwltufm4ohyee" path="res://Demon_assets/decline-solid-svgrepo-com.svg" id="3_dml05"]

[node name="Demon_card" type="CanvasLayer" node_paths=PackedStringArray("accept", "decline")]
script = ExtResource("1_sc3gs")
accept = NodePath("PanelContainer/Info_vbox/Buttons_grid/decline")
decline = NodePath("PanelContainer/Info_vbox/Buttons_grid/accept")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 410.0
offset_top = 14.0
offset_right = -410.001
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer"]
layout_mode = 2
stretch = true

[node name="photo" type="SubViewport" parent="PanelContainer/SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(331, 620)
render_target_update_mode = 4

[node name="Privew3dDemon" parent="PanelContainer/SubViewportContainer/photo" instance=ExtResource("2_vluwp")]

[node name="photo" type="TextureRect" parent="PanelContainer/SubViewportContainer/photo"]
texture = ExtResource("2_faytf")
expand_mode = 4
stretch_mode = 6

[node name="Info_vbox" type="VBoxContainer" parent="PanelContainer"]
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Name_age_vbox" type="HBoxContainer" parent="PanelContainer/Info_vbox"]
layout_mode = 2

[node name="name" type="Label" parent="PanelContainer/Info_vbox/Name_age_vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Name"

[node name="age" type="Label" parent="PanelContainer/Info_vbox/Name_age_vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1337"

[node name="Stats_grid" type="GridContainer" parent="PanelContainer/Info_vbox"]
layout_mode = 2
columns = 2

[node name="stat_1" type="Label" parent="PanelContainer/Info_vbox/Stats_grid"]
layout_mode = 2
text = "some stat: 
"

[node name="stat_value_1" type="Label" parent="PanelContainer/Info_vbox/Stats_grid"]
layout_mode = 2
text = "50
"

[node name="stat_2" type="Label" parent="PanelContainer/Info_vbox/Stats_grid"]
layout_mode = 2
text = "other stat:"

[node name="stat_value_2" type="Label" parent="PanelContainer/Info_vbox/Stats_grid"]
layout_mode = 2
text = "100
"

[node name="Buttons_grid" type="Panel" parent="PanelContainer/Info_vbox"]
custom_minimum_size = Vector2(35.96, 0)
layout_mode = 2
size_flags_vertical = 10
script = ExtResource("3_cv786")

[node name="decline" type="TextureButton" parent="PanelContainer/Info_vbox/Buttons_grid"]
layout_mode = 2
offset_right = 165.5
offset_bottom = 165.5
texture_normal = ExtResource("3_dml05")
ignore_texture_size = true
stretch_mode = 0

[node name="accept" type="TextureButton" parent="PanelContainer/Info_vbox/Buttons_grid"]
layout_direction = 2
layout_mode = 2
offset_left = 165.5
offset_right = 331.0
offset_bottom = 165.5
texture_normal = ExtResource("2_dj31m")
ignore_texture_size = true
stretch_mode = 0
